[package]
name = "route_finder"
version = "0.1.0"
edition = "2024"

[profile.test]
opt-level = 3            # For stress tests
debug-assertions = false

[dependencies]
eframe = "0.33.2"
egui = { version = "0.33.2", features = ["mint"] }
flume = "0.11.1"
petgraph = { version = "0.8.3", features = ["rayon"] }
rand = { version = "0.9.2", features = ["nightly", "simd_support"] }
rayon = "1.11.0"
time = { version = "0.3.44", features = ["local-offset"] }
winit = "0.30.12"
test-env-helpers = "0.2.2"
